more alignment issues

--- a/docs/css/homePage.css
+++ b/docs/css/homePage.css
@@ -40,9 +40,9 @@ body, html{
     top: 12%;
     left: 27%;
     z-index: 5;
-    height: 50%;
+    height: 80%;
 
-    animation: logoUnturned 1.2s ease-out;
+    animation: logoUnturned 2.2s ease-out;
 }
 
 .logoDucks {
@@ -51,7 +51,7 @@ body, html{
     left: 55%;
     width: 40%;
 
-    animation: logoDucks 2.4s ease-out;
+    animation: logoDucks 3.4s ease-out;
 }
 
 .logoOfficial {
@@ -60,7 +60,7 @@ body, html{
     left: 42%;
     width: 40%;
     
-    animation: logoOfficial 2.4s ease-out;
+    animation: logoOfficial 3.4s ease-out;
 }
 
 @keyframes logoUnturned {
